k8/booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: eventbookingacr.azurecr.io/booking-service:latest
          ports:
            - containerPort: 5005
          readinessProbe:
            httpGet:
              path: /health
              port: 5005
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5005
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 5005
      targetPort: 5005
  type: ClusterIP
