k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 68-210-65-26.nip.io
      secretName: event-booking-tls
  rules:
    - host: 68-210-65-26.nip.io
      http:
        paths:
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 5002
          - path: /organize(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: organize-service
                port:
                  number: 5003
          - path: /events(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-discovery
                port:
                  number: 5004
          - path: /book(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service
                port:
                  number: 5005
          - path: /payment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 5006
          - path: /dashboard(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dashboard-service
                port:
                  number: 5007
